--- a/src/index.html
+++ b/src/index.html
@@ -81,19 +81,17 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>How does it work?</h2>
-            <p>Almost There makes createing a fundsraising campaign as easy as it gets. You need a good idea: We will take care of the rest!</p>
+            <p>Almost There makes creating a fundraising campaign as simple as possible. You just need a good idea, we will take care of the rest!</p>
             <p>With Almost There there are no intermediaries, the donations go straight from the donors to the campaign owner. When the campaign is over, if the goal was not reached, though, the donations will be returned.</p>
-            <p>Something something cryptocurrencies. "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
           </div>
           <div class="col-lg-6 align-self-end mb-5">
             <img class="img-fluid" src="assets/img/idea.jpg">
           </div>
-          
         </div>
         <div class="row">
           <div class="col-lg-12">
             <h2>What is Near and why does it matter?</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+            <p>NEAR is a novel blockchain technology, that allows to decentralize applications. This means that your campaing, and the payments of your supporters, will be hosted and processed by a secure decentralized network. No middleman, no complications, just you, and your supporters. If your campaigne gets funded, the network will automatically send you the money. If it doesnt, then the network will take care of refunding your supporters. No middleman also means, lower fees! Your supporters will only pay a minimum amount (called gas) to keep the network running, the rest, is all for you!</p>
           </div>
         </div>
       </div>
@@ -126,7 +124,7 @@
                 <input type="text" class="form-control mr-sm-2 campaign-input" placeholder="Who?" aria-label="donation-amount" id="who-input" aria-describedby="basic-addon2">
                 <input type="text" class="form-control mr-sm-2 campaign-input" placeholder="To Do What?" aria-label="donation-amount" id="what-input" aria-describedby="basic-addon2">
               </form>
-              <p style="font-style: italic;">E.g. Help me publish my new videogame. Help us open the new kitten shelter.</p>
+              <p style="font-style: italic;">E.g. Help <span class="red-text"> me </span> to <span class="red-text"> publish my new videogame</span>. Help <span class="red-text"> us </span> to <span class="red-text"> open the new kitten shelter</span>.</p>
             </div>
           </div>
           <div class="row mb-5" data-aos="fade-up" data-aos-delay="200">
@@ -146,7 +144,7 @@
                 <h3 class="mr-sm-2 my-auto">Your campaign goal</h3>
                 <input type="text" class="form-control mr-sm-2 campaign-input" placeholder="How Much?" aria-label="donation-amount" id="how-much-input" aria-describedby="basic-addon2">
               </form>
-              <p style="font-style: italic;">Remember this goal and the donations you will receive, are in the<a href="https://www.coingecko.com/en/coins/near">Near cryptocurrency</a>.</p><br>
+              <p style="font-style: italic;">Remember this goal and the donations you will receive, are in the <a href="https://www.coingecko.com/en/coins/near">Near cryptocurrency</a>.</p><br>
               <form class="form-inline justify-content-center">
                 <h3 class="mr-sm-2 my-auto">The closing date</h3>
                 <input type="text" class="form-control mr-sm-2 campaign-input" placeholder="When?" aria-label="donation-amount" id="when-input" aria-describedby="basic-addon2">
