--- a/src/campaign.html
+++ b/src/campaign.html
@@ -6,8 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Almost There - TEMPLATE_TITLE</title>
-  <meta content="Foundrasiers in the blockchain" name="description">
-  <meta content="foundraise, kickstarter, blockchain" name="keywords">
+  <meta content="Fundrasiers in the blockchain" name="description">
+  <meta content="fundraise, kickstarter, gofoundme, blockchain" name="keywords">
+  <meta content="TEMPLATE_META_IMAGE" name="og:image">
   <meta content="TEMPLATE_CAMPAIGN_ID" name="campaign-id">
   <meta content="TEMPLATE_CONTRACT_NAME" name="contractName">
   <meta content="TEMPLATE_NETWORK_ID" name="networkId">
