--- a/src/header.html
+++ b/src/header.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Almost There</title>
-  <meta content="Foundrasiers in the blockchain" name="description">
-  <meta content="foundraise, kickstarter, blockchain" name="keywords">
+  <meta content="Fundrasiers in the blockchain" name="description">
+  <meta content="fundraise, kickstarter, gofoundme, blockchain" name="keywords">
   <meta content="dev-1601053123010-5211218" name="contract-name">
 	<meta content="gatinho.testnet-1601222567516033507" name="campaign-id">
   <!-- Favicons -->
