--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Almost There</title>
-  <meta content="Foundrasiers in the blockchain" name="description">
-  <meta content="foundraise, kickstarter, blockchain" name="keywords">
+  <meta content="Fundrasiers in the blockchain" name="description">
+  <meta content="fundraise, kickstarter, gofoundme, blockchain" name="keywords">
 
   <!-- Favicons -->
   <link href="https://siasky.net/MAClgd30gDehzTGasNr4HSxRpNQ-t2tOjRXD0ofBIthC6g" rel="icon">
