--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Almost There - TEMPLATE_TITLE</title>
-  <meta content="Foundrasiers in the blockchain" name="description">
-  <meta content="foundraise, kickstarter, blockchain" name="keywords">
-
+  <meta content="Fundrasiers in the blockchain" name="description">
+  <meta content="fundraise, kickstarter, gofoundme, blockchain" name="keywords">
+  <meta content="TEMPLATE_META_IMAGE" name="og:image">
   <!-- Favicons -->
   <link href="https://siasky.net/MAClgd30gDehzTGasNr4HSxRpNQ-t2tOjRXD0ofBIthC6g" rel="icon">
   <link href="https://siasky.net/MAClgd30gDehzTGasNr4HSxRpNQ-t2tOjRXD0ofBIthC6g" rel="apple-touch-icon">
